fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -26,11 +26,19 @@ h2 {
 }
 
 .container {
+  box-sizing: border-box;
   max-width: 400px;
-  margin: 40px auto 0 auto;
+  margin: 40px auto;
   box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
     0 9px 46px 8px rgba(0, 0, 0, 0.12),
     0 11px 15px -7px rgba(0, 0, 0, 0.4);
+}
+
+@media (max-width: 500px) {
+  .container {
+    max-width: 100%;
+    margin: 40px;
+  }
 }
 
 .top {
